# ex-preppy

./: .gitattributes  .gitignore  .python-version  .vulture-allowlist.py  README.md  ex-1.1-color-data.ipynb  ex-1.2-color-mlp-bottleneck.ipynb  ex-1.3-color-mlp-curriculum.ipynb  ex-1.4-color-mlp-anchoring.ipynb  ex-1.4.0-parameter-transitions.ipynb  ex-1.5-color-mlp-anchoring.ipynb  ex-1.5-dopesheet.csv  ex-bottleneck.ipynb  ex-color-data.ipynb  go  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-commit-msg-gen.md  copilot-instructions.md  copilot-python-gen.md  copilot-python-test-gen.md
.github/workflows/: copilot-setup-steps.yml  lint-check.yml  publish-docs.yml
docs/: REFACTORING.md  ex-1.1-color-data.ipynb  ex-1.2-color-mlp-bottleneck.ipynb  ex-1.3-color-mlp-curriculum.ipynb  ex-1.4-parameter-transitions.ipynb  ex-1.5-color-mlp-anchoring.ipynb  ex-1.5-dopesheet.csv  ex-1.6-curriculum-comparison.ipynb  ex-1.6-smooth-dopesheet.csv  ex-1.6-stepped-dopesheet.csv  ex-1.7-dopesheet.csv  ex-1.7-sparse-labels.ipynb  experiment-tracking.md  machinery-dopesheet.csv
docs/m1-color-mlp/: ex-1.1-color-data.ipynb  ex-1.1.1-color-cube.ipynb  ex-1.2-color-mlp-bottleneck.ipynb  ex-1.3-color-mlp-curriculum.ipynb  ex-1.5-color-mlp-anchoring.ipynb  ex-1.6-curriculum-comparison.ipynb  ex-1.6-stepped-dopesheet.csv  ex-1.7-dopesheet.csv  ex-1.7-sparse-labels.ipynb  ex-1.8-regularizer-combinations.ipynb
docs/m2-control/: ex-2.1-dopesheet.csv  ex-2.1-intervention-lobe.ipynb  ex-2.1-isolate-red.ipynb  ex-2.10-delete-only-red-5d-no-subspace.ipynb  ex-2.10-dopesheet.csv  ex-2.10.1-delete-only-red-reformat.ipynb  ex-2.10.1-dopesheet.csv  ex-2.10.1-redux.ipynb  ex-2.11-dopesheet.csv  ex-2.11-measure-supervision.ipynb  ex-2.2-dopesheet.csv  ex-2.2-inhibit-red.ipynb  ex-2.2-isolate-red.ipynb  ex-2.3-explicit-norm.ipynb  ex-2.4-dopesheet.csv  ex-2.4-post-norm-reg.ipynb  ex-2.4.1-dopesheet.csv  ex-2.4.1-redux.ipynb  ex-2.5-dopesheet.csv  ex-2.5-only-red.ipynb  ex-2.5.1-dopesheet.csv  ex-2.5.1-redux.ipynb  ex-2.6-delete-warm-cool.ipynb  ex-2.7-delete-hue.ipynb  ex-2.7.1-dopesheet.csv  ex-2.7.1-redux.ipynb  ex-2.8-delete-only-red.ipynb  ex-2.8-dopesheet.csv  ex-2.9-delete-only-red-5d.ipynb  ex-2.9-dopesheet.csv  ex-2.9.1-redux.ipynb
publications/: d0.1-concept-anchoring.md  d1.1-selective-regularization.md  d1.2-side-quests.md
scripts/: auth.sh  build-site-collapse.js  build-site-nb.css  build-site.sh  build_site.py  check.sh  deadcode.sh  format.sh  ipynb_to_py.py  lint.sh  test.sh  track.sh  typecheck.sh
scripts/git-hooks/: dispatcher.sh  install.sh  pre-commit
src/ex_color/: __main__.py  catalyst_main.py  catalyst_runner.py  catalyst_simple.py  catalyst_train.py  data.py  evaluation.py  events.py  hooks.py  inference.py  labelling.py  lightning_callbacks.py  loaders.py  losses.py  model.py  record.py  result.py  seed.py  surgery.py  train.py  train_ignite.py  train_lightning.py  training.py  vis.py  workflow.py  workflows.py
src/infra/: requirements.py
src/mini/: data.py  experiment.py  guards.py  hither.py  local_dispatch.py  types.py  utils.py
src/track/: __init__.py  aim.py  auth_wrapper.py  repo_factory.py  secrets.py  session_secret.py
src/utils/: _nb.py  coro.py  dopesheet.py  nb.py  plt.py  progress.py  requirements.py  strings.py  time.py  transitions.py
tests/ex_color/: test_data.py  test_evaluation.py  test_surgery.py  (+2 more)
(+115 files in other folders)
