[project]
name = "ex-preppy"
version = "0.1.0"
description = "Prescriptive representation engineering experiments"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "airium>=0.2.7",
    "ftfy>=6.3.1",
    "jaxtyping>=0.2.38",
    "modal>=0.73.67",
    "numpy>=2.3",
    "pandas>=2.3",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "sympy>=1.13.1",
    "lightning>=2.4.0",
    "wandb>=0.21.0",
]

[project.optional-dependencies]
# define an extra for CPU-only torch, for Codespaces
torch-cpu = [
  "torch~=2.6.0",
]
# Include the default one too, so that `uv tree` includes cuda packages
torch = [
  "torch~=2.6.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
    "pandas-stubs",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.5",
    "ruff>=0.9.7",
    "vulture>=2.14",
    "scipy-stubs>=1.15.2.2",
]
local = [
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "polars>=1.23.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
pages = [
    "nbconvert",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
conflicts = [
  [
    { extra = "torch-cpu" },
    { extra = "torch" },
  ],
]

[tool.uv.build-backend]
namespace = true  # Auto-discover contents of src/

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "torch-cpu" },
    # Otherwise, fall back on the default PyPI index.
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 120
extend-exclude = [".vulture-*"]

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "D", "T"]
ignore = [
    "E501", "E731",
    "C408",
    "D100", "D101", "D102", "D103", "D104", "D105", "D107", "D202", "D203", "D204", "D211", "D212", "D213", "D400", "D401", "D413", "D415",
    "F722",
    "Q000",
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
    "C408", "C416",
    "D205", "D400", "D401", "D407", "D415", "D416", "D417",
    "E402", "E701", "E731", "E741",
    "F811",
]
"**/experiment/**/*.py" = [
    "C416",
    "D203", "D205", "D400", "D401", "D415",
]
"tests/**/*.py" = [
    "D",
]

[tool.ty.src]
# Exclude notebooks and visualization files from type checking to reduce memory usage
# ty struggles with notebooks and optional dependencies like matplotlib/IPython
exclude = [
    "**/*.ipynb",
    "src/**/vis.py",
    "src/**/vis/",
    "src/utils/plt.py",
    "src/utils/nb.py",
    "src/utils/_nb.py",
    "src/utils/lr_finder/vis.py",
    "scripts/build-site-config.py",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.vulture]
exclude = [
    "*/__pycache__/*",
    "*.ipynb_checkpoints/*",
    "*/.venv/*",
    "*.egg-info/*"
]
ignore_decorators = [
    "@override",
    "@modal.asgi_app",
    "@app.middleware",
    "@app.get",
    "@functools.lru_cache",
    "@property",
    "@classmethod",
    "@staticmethod",
    "@model_validator"
]
ignore_names = [
    "visit_*",
    "do_*",
    "test_*",
    "setUp",
    "tearDown"
]
# make_whitelist = true
min_confidence = 60
paths = [
    "src/",
    "tests/",
    ".vulture-cache/",
    ".vulture-allowlist.py"
]
sort_by_size = true
# verbose = true
